Cai dat express chay thong bao xin chao

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
+    "start": "nodemon server.js"
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Vu Nguyen",
@@ -15,6 +16,7 @@
   "devDependencies": {
     "eslint": "^9.10.0",
     "eslint-config-prettier": "^9.1.0",
+    "nodemon": "^3.1.5",
     "prettier": "^3.3.3"
   }
 }
